--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Hexo Configuration
-## Docs: https://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
+# Docs: https://hexo.io/docs/configuration.html
+# Source: https://github.com/hexojs/hexo/
 
 # Site
 title: IDGI
@@ -12,7 +12,7 @@ language: cn
 timezone: 'Asia/Shanghai'
 
 # URL
-## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
+# Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
 url: http://attractiveboy.top
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -71,36 +71,36 @@ category_map:
 tag_map:
 
 # Metadata elements
-## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
+# https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
 meta_generator: true
 
 # Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
+# Hexo uses Moment.js to parse and display date
+# You can customize the date format as defined in
+# http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-## updated_option supports 'mtime', 'date', 'empty'
+# updated_option supports 'mtime', 'date', 'empty'
 updated_option: 'mtime'
 
 # Pagination
-## Set per_page to 0 to disable pagination
+# Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
 
 # Include / Exclude file(s)
-## include:/exclude: options only apply to the 'source/' folder
+# include:/exclude: options only apply to the 'source/' folder
 include:
 exclude:
 ignore:
 
 # Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
+# Plugins: https://hexo.io/plugins/
+# Themes: https://hexo.io/themes/
 theme: hexo-theme-aomori
 
 # Deployment
-## Docs: https://hexo.io/docs/one-command-deployment
+# Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
   repository: git@github.com:attractive-boy/attractive-boy.github.io.git
@@ -144,41 +144,41 @@ aomori_social:
 aomori_baidu_sitepush: true  
 
 # 百度统计
-##aomori_baidu_analytics: 'a5b64319b7941e0cb3c0cb4aad7c4cea'
+# aomori_baidu_analytics: 'a5b64319b7941e0cb3c0cb4aad7c4cea'
 
 # Google 统计
-##aomori_google_analytics: 'UA-XXXXX-X'
+# aomori_google_analytics: 'UA-XXXXX-X'
 
 # Google Site Verification
-##aomori_google_site:
-##enable: true
-##id: XXX
+# aomori_google_site:
+# enable: true
+# id: XXX
 
 # 不蒜子 统计
 aomori_busuanzi: true
 
 # Emoji Favicon
-##aomori_favicon: 🎮 
+# aomori_favicon: 🎮 
 
-# comment
-#aomori_valine:
-  #enable: true
-  #appId: 'QveONKJXoGOXEGdNb3e0iJpU-MdYXbMMI'
-  #appKey: 'GojSrg0lF1RWya5pBJ4qBozc'
-
-aomori_gitalk:
+#comment
+aomori_valine:
   enable: true
-  clientID: 97ff5e0e940c54e6f525
-  clientSecret: a8f7deaf784f0c416c47295984a8081ba9cce048
-  repo: IDGI-gitalk
-  owner: attractive-boy
-  admin: 
-    - attractive-boy
-  distractionFreeMode: true // Facebook-like distraction free mode
+  appId: 'QveONKJXoGOXEGdNb3e0iJpU-MdYXbMMI'
+  appKey: 'GojSrg0lF1RWya5pBJ4qBozc'
+
+# aomori_gitalk:
+#   enable: true
+#   clientID: 97ff5e0e940c54e6f525
+#   clientSecret: a8f7deaf784f0c416c47295984a8081ba9cce048
+#   repo: IDGI-gitalk
+#   owner: attractive-boy
+#   admin: 
+#     - attractive-boy
+#   distractionFreeMode: true // Facebook-like distraction free mode
 
 # Extensions
-## Plugins: http://hexo.io/plugins/
-#RSS订阅
+# Plugins: http://hexo.io/plugins/
+# RSS订阅
 plugin:
 - hexo-generator-feed
 #Feed Atom
