--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "hexo server",
+    "git": "set HEXO_ALGOLIA_INDEXING_KEY=ef9ac53b1dc397c7d3b25d82cae76c9c && hexo clean && hexo g && hexo algolia && hexo d"
   },
   "hexo": {
-    "version": "5.4.0"
+    "version": "6.2.0"
   },
   "dependencies": {
-    "hexo": "^5.4.0",
+    "hexo": "^6.2.0",
     "hexo-algolia": "^1.3.2",
     "hexo-cli": "^4.3.0",
     "hexo-deployer-git": "^3.0.0",
@@ -22,10 +23,10 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-git-backup": "^0.1.3",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^4.0.0",
-    "hexo-renderer-stylus": "^2.0.0",
-    "hexo-server": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-stylus": "^2.1.0",
+    "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3"
   }
 }
