--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 # Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://attractiveboy.top
+url: http://attractive-boy.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -28,8 +28,6 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: music/**
-
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
@@ -114,7 +112,6 @@ aomori_logo_typed_animated: true
 # 头部菜单
 aomori_menu:
   Home: /
-  Archives: /archives
 
 # 侧边栏菜单
 aomori_widgets:
@@ -122,7 +119,6 @@ aomori_widgets:
   - category  #文章分类
   - tag # 文章标签
   - recent_posts  # 最新文章
-  - archive #文章归档
 
 # 知识共享使用许可
 aomori_copyright: false # or false
@@ -199,7 +195,7 @@ algolia:
   apiKey: '4cf3813afab1cda9a5d89eadf450864b'
   indexName: 'IDGI'
 
-aomori_search_algolia: true
+aomori_search_algolia: false
 
 rss: /atom.xml
 
